# sf-change-ledger

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  _headers  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  robots.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-pages.yml  pages.yml
assets/: site.css  site.js
samples/after/: metadata.xml  picklists.json
samples/before/: metadata.xml  picklists.json
src/sf_change_ledger/: __init__.py  __main__.py  cli.py  diff.py  ingest.py  models.py  normalise.py  report.py  risk.py
src/sf_change_ledger/parsers/: __init__.py  metadata.py  picklists.py
tests/: test_diff_and_risk.py  test_excel.py  test_ingest.py  test_report_and_cli.py  test_static_site.py  test_web.py
web/: __init__.py  app.py
web/static/: app.js  styles.css
web/templates/: base.html  index.html  results.html
